<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="80sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"/>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:hint="@string/user_pass"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/cm_et_ip"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:text="192.168.0.103:1234"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:hint="@string/button_login"
        android:onClick="sendLoginRequest"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:hint="@string/button_register"
        android:onClick="registerActivity"/>

</LinearLayout>
