<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/fmpi_tv_photo"
        android:background="@mipmap/im_no_profile_image"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fmpi_tv_nombre_persona"
            android:id="@+id/fmpi_tv_nombre"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fmpi_tv_alias_persona"
            android:id="@+id/fmpi_tv_alias" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fmpi_tv_mail_persona"
            android:id="@+id/fmpi_tv_mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fmpi_tv_sex_persona"
            android:id="@+id/fmpi_tv_sex" />

    </LinearLayout>

</LinearLayout>