<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tallerii.match.FragmentEditPerfilInterestDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/EIA_TV_interest"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EIA_ET_newInterest"
        android:hint="@string/eia_et_newInterest" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/epa_b_agregar_interes"
        android:id="@+id/fefid_b_accept"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eia_b_aceptarCambios"
        android:id="@+id/fefid_b_save"
        android:layout_gravity="center_horizontal"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/EIA_LV_details" />

</LinearLayout>
