<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:showIn="@layout/activity_register">

    <TextView
        android:text="@string/register_head"
        android:textSize="20sp"
        android:layout_height="40dp"
        android:layout_width="250dp"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"/>

    <EditText
        android:id="@+id/user_firstname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:hint="Nombre y Apellido"/>

    <EditText
        android:id="@+id/user_age"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:layout_gravity="center"
        android:inputType="number"
        android:singleLine="true"
        android:hint="Edad"/>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:hint="@string/user_pass"
        android:inputType="textPassword"/>

    <Switch
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="Sexo"
        android:id="@+id/user_sex"
        android:textSize="20dp"
        android:textOn="Hombre"
        android:textOff="Mujer"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

    <EditText
        android:id="@+id/cr_et_ip"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="0sp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:text="192.168.43.146:8004"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:hint="@string/button_signup"
        android:onClick="sendSignUp"/>

</LinearLayout>
