<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tallerii.match.EditPerfilActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/EP_LL_parentLL">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ep_text_nickname"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ep_tv_nombre"
            android:id="@+id/textView7"
            android:layout_gravity="center_vertical" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0.05"
            android:text="New Button"
            android:id="@+id/button4"
            android:background="@mipmap/file_edit"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ep_tv_email"
            android:id="@+id/textView8"
            android:layout_gravity="center_vertical" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0.05"
            android:text="New Button"
            android:id="@+id/button5"
            android:background="@mipmap/file_edit"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ep_tv_interes"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/EP_LL_interest">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ep_tv_interest_music"
                android:id="@+id/textView9"
                android:layout_gravity="center_vertical"
                android:textStyle="bold|italic" />

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0.05"
                android:text="New Button"
                android:id="@+id/button6"
                android:background="@mipmap/plus"
                android:layout_gravity="center_vertical"
                android:tag="music"
                android:onClick="OnAddInterest" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>